--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,6 @@ dependencies {
     implementation "androidx.room:room-runtime:$room_version"
     annotationProcessor "androidx.room:room-compiler:$room_version"
 
-
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
 }
